Add games page to index

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -75,7 +75,9 @@
       <center>
         <div id="post-stream">
           <header>
-            <h3>Games I'm (slowly) progressing through</h3>
+            <h3>
+              <a href="/games">Games I'm (slowly) progressing through</a>
+            </h3>
           </header>
           <ul>
           {{ range first 1 $.Site.Data.games }}
