--- a/layouts/debug/single.html
+++ b/layouts/debug/single.html
@@ -1,6 +1,10 @@
 {{ define "main" }}
 <article class='{{ if isset .Params "maxwidth" }}full{{ end }}'>
-  <h1>{{ .Title }}</h1>
-  {{ .Content }}
+  <header>
+    <h1>{{ .Title }}</h1>
+  </header>
+  <div id="post-body">
+    {{ .Content }}
+  </div>
 </article>
 {{ end }}
