--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -35,8 +35,7 @@
 {{ end }}
 
 {{ if ne .Site.IsServer true }}
-<script defer data-api='https://utf9k.net/api/event' data-domain='utf9k.net'
-  src='https://utf9k.net/statistician.js'></script>
+<script defer data-api='/api/event' data-domain='utf9k.net' src='/statistician.js'></script>
 {{ end }}
 
 <link rel="stylesheet" href="https://unpkg.com/littlefoot/dist/littlefoot.css" />
