Use Hugo resource processing to fetch external images

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,9 +26,10 @@
           <ul>
           {{ range first 1 $.Site.Data.books }}
             {{ range where .books "progress" "!=" 100 }}
+              {{ $image := resources.GetRemote .cover }}
               <li style="display: inline-block;">
                 <a href="{{ .link }}">
-                  <img alt="A cover photo of the book titled {{ .title }}" src="{{ .cover }}" height="180px" style="border-radius: 3px;" />
+                  <img alt="A cover photo of the book titled {{ .title }}" src="{{ $image.RelPermalink }}" height="180px" style="border-radius: 3px;" />
                 </a>
               </li>
             {{ end }}
@@ -82,9 +83,10 @@
           <ul>
           {{ range first 1 $.Site.Data.games }}
             {{ range .games }}
+              {{ $image := resources.GetRemote .cover }}
               <li style="display: inline-block;">
                 <a href="{{ .link }}">
-                  <img alt="Box art for the game titled {{ .title }}" src="{{ .cover }}" height="180px" style="border-radius: 3px;" />
+                  <img alt="Box art for the game titled {{ .title }}" src="{{ $image.RelPermalink }}" height="180px" style="border-radius: 3px;" />
                 </a>
               </li>
             {{ end }}
