--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   {{ partial "head.html" . }}
   {{ block "style" . }}{{ end }}
@@ -13,12 +13,5 @@
     </div>
   {{ end }}
   {{ block "script" . }}{{ end }}
-
-  {{ $targetPath := "js/footnotes.js" }}
-  {{ $defines := dict "process.env.NODE_ENV" `"production"` }}
-  {{ $opts := dict "targetPath" $targetPath "defines" $defines }}
-  {{ $built := resources.Get $targetPath | js.Build $opts | fingerprint }}
-  <script type="text/javascript" src="{{ $built.RelPermalink }}" integrity="{{ $built.Data.Integrity }}"></script>
-
 </body>
 </html>
