--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,3 +9,21 @@
   </div>
 </article>
 {{ end }}
+
+{{ define "style" }}
+  {{ $littlefoot := resources.GetRemote "https://unpkg.com/littlefoot/dist/littlefoot.css" | postCSS }}
+  {{ if .Site.IsServer }}
+  <link rel="stylesheet" href="{{ $littlefoot.RelPermalink }}" />
+  {{ else }}
+  {{ $littlefoot := $littlefoot | minify | fingerprint | resources.PostProcess }}
+  <link rel="stylesheet" href="{{ $littlefoot.RelPermalink }}" integrity="{{ $littlefoot.Data.Integrity }}" />
+  {{ end }}
+{{ end }}
+
+{{ define "script" }}
+  {{ $targetPath := "js/footnotes.js" }}
+  {{ $defines := dict "process.env.NODE_ENV" `"production"` }}
+  {{ $opts := dict "targetPath" $targetPath "defines" $defines }}
+  {{ $built := resources.Get $targetPath | js.Build $opts | fingerprint }}
+  <script defer type="text/javascript" src="{{ $built.RelPermalink }}" integrity="{{ $built.Data.Integrity }}"></script>
+{{ end }}
