Update analytics endpoint

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -35,5 +35,5 @@
 {{ end }}
 
 {{ if ne .Site.IsServer true }}
-<script defer data-api='/api/event' data-domain='utf9k.net' src='/statistician.js'></script>
+<script defer data-api='/workers/api/event' data-domain='utf9k.net' src='/workers/statistician.js'></script>
 {{ end }}
