Add image viewer experiment

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,6 +11,7 @@
     <div id="content">
     {{ block "main" . }}{{ end }}
     </div>
+    <div id="fullscreen"></div>
   {{ end }}
   {{ block "script" . }}{{ end }}
 </body>
