--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -627,3 +627,99 @@ footer {
   width: 75%;
   margin: 0 auto;
 }
+
+/* Image Viewer */
+#fullscreen {
+  display: none;
+  position: fixed;
+  opacity: 1;
+  z-index: 1;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 85%);
+}
+
+#fullscreen.show {
+  display: block;
+  animation: normal ease .2s show 1 forwards;
+}
+
+#fullscreen.hide {
+  animation: normal ease .2s hide 1 forwards;
+}
+
+.fullscreen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.fullscreen img {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  opacity: 1;
+  transition: opacity .3s ease;
+}
+
+.closeBtn {
+  position: fixed;
+  right: 2rem;
+  top: 2rem;
+  background: #000;
+  width: 3.2rem;
+  height: 3.2rem;
+  border: .2rem solid #fff;
+  transition: opacity .3s ease;
+}
+
+.closeBtn.hide {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.closeBtn.active, .closeBtn.hover {
+  opacity: .5;
+}
+
+.closeBtn:after, .closeBtn:before {
+  position: absolute;
+  content: '';
+  top: .4rem;
+  left: 1.3rem;
+  height: 2rem;
+  width: .2rem;
+  background-color: #fff;
+}
+
+.closeBtn:before {
+  transform: rotate(45deg);
+}
+
+.closeBtn:after {
+  transform: rotate(-45deg);
+}
+
+@keyframes show {
+  0% {
+      opacity: 0
+  }
+
+  100% {
+      opacity: 1
+  }
+}
+
+@keyframes hide {
+  0% {
+      opacity: 1
+  }
+
+  100% {
+      opacity: 0
+  }
+}
