--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -653,15 +653,15 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+}
+
+.fullscreen img {
+  width: 80%;
 }
 
 .fullscreen img, .fullscreen p {
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  height: auto;
   opacity: 1;
   transition: opacity .3s ease;
 }
