--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -655,6 +655,8 @@ footer {
   height: 100vh;
 }
 
+
+
 .fullscreen img {
   width: 80%;
 }
@@ -707,6 +709,17 @@ footer {
 
 .closeBtn:after {
   transform: rotate(-45deg);
+}
+
+@media only screen and (max-width: 1000px) {
+  .fullscreen {
+    flex-direction: column;
+  }
+
+  .fullscreen p {
+    padding-right: 6rem;
+    padding-top: 2rem;
+  }
 }
 
 @keyframes show {
