Support dark scheme for footnotes
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,11 @@ body {
     background: var(--bg-dark);
     color: var(--text-light);
   }
+
+  .littlefoot-footnote__content {
+    background: var(--bg-dark);
+    color: var(--text-light);
+  }
 }
 
 img,
