Updated manga header
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -95,7 +95,7 @@
       <div id="post-stream">
         <center>
           <header>
-            <h3>Manga I'm churning through</h3>
+            <h3>Manga I'm actively churning through</h3>
           </header>
           <ul>
           {{ range $.Site.Data.manga }}
