Put back game stream widget
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -87,6 +87,26 @@
         </ul>
       </div>
       <hr />
+      <center>
+        <div id="post-stream">
+          <header>
+            <h3>
+              <a href="/games">Games I'm (slowly) progressing through</a>
+            </h3>
+          </header>
+          <ul>
+          {{ range first 1 $.Site.Data.games }}
+            {{ range .games }}
+              {{ $image := resources.GetRemote .cover }}
+              <li style="display: inline-block;">
+                <img alttitle="IGDB" altsrc="{{ .link }}" alt="Box art for the game titled {{ .title }}" src="{{ $image.RelPermalink }}" height="180px" style="border-radius: 3px;" />
+              </li>
+            {{ end }}
+          {{ end }}
+          </ul>
+        </div>
+      </center>
+      <hr />
     </div>
   </div>
 </article>
