--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,35 @@ svg {
   max-width: 100%;
 }
 
+article img:hover {
+  background: red;
+  filter: brightness(0.35);
+  transition: .5s ease;
+}
+
+article .overlay {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.5);
+  transition: .5s ease;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  opacity: 0;
+}
+
+article .overlay:hover {
+  opacity: 1;
+}
+
+article .overlay svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 3rem;
+  width: 3rem;
+}
+
 ul {
   margin-block-start: 0;
   margin-block-end: 0;
