Change post stream id to class
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,7 +246,7 @@ pre {
   height: auto;
 }
 
-#recent-updates #post-stream {
+#recent-updates .post-stream {
   margin-top: 1rem;
 }
 
@@ -256,7 +256,7 @@ pre {
   width: 10rem;
 }
 
-#post-stream li {
+.post-stream li {
   list-style: none;
   text-align: center;
 }
