--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,7 +26,12 @@
           <ul>
           {{ range first 1 $.Site.Data.books }}
             {{ range where .books "progress" "!=" 100 }}
-              {{ $image := resources.GetRemote .cover }}
+              {{ $opts := dict
+                "headers" (dict
+                  "User-Agent" "Mozilla/5.0 (Windows NT 6.0; Win64; x64) AppleWebKit/536.14 (KHTML, like Gecko) Chrome/32.0.2008.86 Safari/536.14)"
+                )
+              }}
+              {{ $image := resources.GetRemote .cover $opts }}
               <li style="display: inline-block;">
                 <img alttitle="OpenLibrary" altsrc="{{ .link }}" alt="A cover image of the book titled {{ .title }}" src="{{ $image.RelPermalink }}" height="180px" style="border-radius: 3px;" />
                 <p>{{ .progress }}% read</p>
@@ -97,7 +102,12 @@
           <ul>
           {{ range first 1 $.Site.Data.games }}
             {{ range .games }}
-              {{ $image := resources.GetRemote .cover }}
+              {{ $opts := dict
+                "headers" (dict
+                  "User-Agent" "Mozilla/5.0 (Windows NT 6.0; Win64; x64) AppleWebKit/536.14 (KHTML, like Gecko) Chrome/32.0.2008.86 Safari/536.14)"
+                )
+              }}
+              {{ $image := resources.GetRemote .cover $opts }}
               <li style="display: inline-block;">
                 <img alttitle="IGDB" altsrc="{{ .link }}" alt="Box art for the game titled {{ .title }}" src="{{ $image.RelPermalink }}" height="180px" style="border-radius: 3px;" />
               </li>
