--- a/src/layouts/PlainText.astro
+++ b/src/layouts/PlainText.astro
@@ -3,7 +3,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
-const { title, description } = Astro.props;
+const { title, description } = Astro.props.content;
 ---
 
 <html lang="en">
