Render projects + set up static dir
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { type CollectionEntry, getCollection } from 'astro:content';
-import BlogPost from '../../layouts/BlogPost.astro';
+import Projects from '../../layouts/Projects.astro';
 
 export async function getStaticPaths() {
 	const posts = await getCollection('projects');
@@ -15,6 +15,6 @@ const post = Astro.props;
 const { Content } = await post.render();
 ---
 
-<BlogPost {...post.data}>
+<Projects {...post.data}>
 	<Content />
-</BlogPost>
+</Projects>
