--- a/layouts/index.html
+++ b/layouts/index.html
@@ -64,7 +64,7 @@
         <h3 id="action">😵‍💫 This widget should have loaded by now!</h3>
         <div>
           <div id="rotating-border" class="rotating-border-hidden">
-            <img src="/cover.png" id="cover" alt="A grey placeholder cover that is just taking up space until the real cover art is loaded">
+            <img src="/placeholder.png" id="cover" alt="A grey placeholder cover that is just taking up space until the real cover art is loaded">
           </div>
         </div>
         <strong id="title">Fingers Crossed</strong>
