--- a/astro/src/pages/reviews/[...slug].astro
+++ b/astro/src/pages/reviews/[...slug].astro
@@ -3,8 +3,8 @@ import { getCollection } from 'astro:content';
 import Layout from '../../layouts/Layout.astro';
 
 export async function getStaticPaths() {
-  const posts = await getCollection('blog');
-  return posts.map(entry => ({
+  const reviews = await getCollection('reviews');
+  return reviews.map(entry => ({
     params: { slug: entry.slug }, props: { entry },
   }));
 }
