Wire up types for blog lost
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/astro/src/components/PostList.astro
+++ b/astro/src/components/PostList.astro
@@ -1,4 +1,10 @@
 ---
+import type { CollectionEntry } from 'astro:content';
+
+interface Props {
+  posts: CollectionEntry<'blog'>[]
+}
+
 const { posts } = Astro.props;
 ---
 
