--- a/astro/src/pages/projects.astro
+++ b/astro/src/pages/projects.astro
@@ -1,12 +1,12 @@
 ---
 import { getCollection } from 'astro:content';
-import Layout from "../layouts/Layout.astro";
-import Posts from '../components/Posts.astro'
+import BaseLayout from "../layouts/Base.astro";
+import Posts from '../components/PostList.astro'
 
 const projects = await getCollection("projects")
 ---
 
-<Layout title="Welcome to Astro.">
+<BaseLayout title="Welcome to Astro.">
     <h1>Projects</h1>
     <Posts posts={projects} />
-</Layout>
+</BaseLayout>
