--- a/astro/src/pages/reviews.astro
+++ b/astro/src/pages/reviews.astro
@@ -1,13 +1,13 @@
 ---
 import { getCollection } from 'astro:content';
-import Layout from "../layouts/Layout.astro";
-import Posts from '../components/Posts.astro'
+import BaseLayout from "../layouts/Base.astro";
+import Posts from '../components/PostList.astro'
 
 const reviews = await getCollection("reviews")
 
 ---
 
-<Layout title="Welcome to Astro.">
+<BaseLayout title="Welcome to Astro.">
     <h1>Reviews</h1>
     <Posts posts={reviews} />
-</Layout>
+</BaseLayout>
