--- a/astro/src/pages/blog.astro
+++ b/astro/src/pages/blog.astro
@@ -7,6 +7,10 @@ const blogEntries = await getCollection("blog")
 ---
 
 <BaseLayout title="Welcome to Astro.">
-    <h1>Blog posts</h1>
-    <Posts posts={blogEntries} />
+    <main>
+        <header>
+            <h1>Blog posts</h1>
+        </header>
+        <Posts posts={blogEntries} />
+    </main>
 </BaseLayout>
