--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -162,5 +162,7 @@ import manga from "../data/manga.json";
       </div>
     </div>
   </article>
-  <script src="../js/live-player.js"></script>
+  <script>
+    import '../js/live-player'
+  </script>
 </BaseLayout>
