--- a/astro/src/layouts/Base.astro
+++ b/astro/src/layouts/Base.astro
@@ -4,6 +4,8 @@ interface Props {
 }
 
 const { title } = Astro.props;
+
+import Head from "../components/Head.astro"
 import Nav from "../components/Nav.astro"
 import "../css/style.css"
 ---
@@ -11,12 +13,7 @@ import "../css/style.css"
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8" />
-	<meta name="description" content="Astro description" />
-	<meta name="viewport" content="width=device-width" />
-	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-	<meta name="generator" content={Astro.generator} />
-	<title>{title}</title>
+	<Head title={title} />
 </head>
 <body>
 	<Nav />
