--- a/astro/src/pages/projects.astro
+++ b/astro/src/pages/projects.astro
@@ -1,12 +1,16 @@
 ---
-import { getCollection } from 'astro:content';
+import { getCollection } from "astro:content";
 import BaseLayout from "../layouts/Base.astro";
-import Posts from '../components/PostList.astro'
+import ProjectList from "../components/ProjectList.astro";
 
-const projects = await getCollection("projects")
+const projects = await getCollection("projects");
 ---
 
 <BaseLayout title="Welcome to Astro.">
-    <h1>Projects</h1>
-    <Posts posts={projects} />
+  <main>
+    <header>
+      <h1>Projects</h1>
+    </header>
+    <ProjectList projects={projects} />
+  </main>
 </BaseLayout>
