--- a/astro/src/pages/questions/[...slug].astro
+++ b/astro/src/pages/questions/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
-import Layout from '../../layouts/Base.astro';
+import MarkdownPost from '../../layouts/MarkdownPost.astro';
 
 export async function getStaticPaths() {
   const questions = await getCollection('questions');
@@ -13,11 +13,12 @@ const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
 
-<Layout title={entry.data.title}>
-    <h1>{entry.data.title}</h1>
-    <h2>{entry.data.description}</h2>
-    <hr />
-    <div>
-        <Content />
-    </div>
-</Layout>
+<MarkdownPost title={entry.data.title}>
+  <Content />
+</MarkdownPost>
+
+<script>
+  import littlefoot from "littlefoot";
+
+  littlefoot()
+</script>
