--- a/astro/src/components/QuestionList.astro
+++ b/astro/src/components/QuestionList.astro
@@ -7,9 +7,7 @@ interface Props {
 
 const { questions } = Astro.props;
 
-for (let question of questions) {
-
-}
+import { createHash } from "node:crypto"
 
 const systemColours = [
   "lightpink",
@@ -35,13 +33,25 @@ const systemColours = [
 ---
 
 <ul>
-    {
-        questions
-        .map(q => (
-            <li id={q.slug} class="question">
-            </li>
-        ))
-    }
+  {
+    questions.map((q) => {
+      const tags = q.data.tags.map(t => {
+        // Hash each tag and reduce it down to just numbers
+        const hash = createHash("sha256").update("microsoft").digest("hex").replace(/[a-zA-Z]+/g, '')
+        // Modulo hash to fit within list of colours
+        const i = Number(hash) % systemColours.length
+        return (
+          <span style={`color: ${systemColours[i]}`}>#{t}</span>
+        )
+      })
+      return (
+        <li id={q.slug} class="question">
+          <a href={`/${q.collection}/${q.slug}`}>{q.data.title}</a>
+          {tags}
+        </li>
+      );
+    })
+  }
   <!-- {{ range sort .Pages "Lastmod" "desc" }}
     <li id="{{ .Slug }}" class="question">
       <a href="{{ .RelPermalink }}">{{ .Title }}</a>
