--- a/astro/src/pages/reviews.astro
+++ b/astro/src/pages/reviews.astro
@@ -1,13 +1,16 @@
 ---
-import { getCollection } from 'astro:content';
+import { getCollection } from "astro:content";
 import BaseLayout from "../layouts/Base.astro";
-import Posts from '../components/PostList.astro'
+import ReviewList from "../components/ReviewList.astro";
 
-const reviews = await getCollection("reviews")
-
+const reviews = await getCollection("reviews");
 ---
 
 <BaseLayout title="Welcome to Astro.">
-    <h1>Reviews</h1>
-    <Posts reviews={reviews} />
+  <main>
+    <header>
+      <h1>Reviews</h1>
+    </header>
+    <ReviewList reviews={reviews} />
+  </main>
 </BaseLayout>
